1496800852 | 55 files | A  BuildbotPaths/libphonon.txt, A  BuildbotPaths/libsteamaudio.txt, M  Strings/libclient.txt, M  Strings/libpanorama.txt, M  Strings/libpanoramauiclient.txt, A  Strings/libphonon.txt, M  Strings/libserver.txt, A  Strings/libsteamaudio.txt, A  Symbols/libphonon.txt, A  Symbols/libsteamaudio.txt, M  bin/version.txt, M  content/panorama/localization/tenfoot_danish.txt, M  content/panorama/localization/tenfoot_japanese.txt, M  content/panorama/localization/tenfoot_ukrainian.txt, M  content/vrmonitor/translations/vrmonitor_errors_danish.txt, M  content/vrmonitor/translations/vrmonitor_errors_italian.txt, M  content/vrmonitor/translations/vrmonitor_errors_ukrainian.txt, M  content/vrmonitor/translations/vrmonitor_german.txt, M  content/vrmonitor/translations/vrmonitor_italian.txt, M  content/vrmonitor/translations/vrmonitor_japanese.txt, M  content/vrmonitor/translations/vrmonitor_romanian.txt, M  content/vrmonitor/translations/vrmonitor_turkish.txt, M  tools/steamvr_environments/game/steamtours/gameinfo.gi, M  too

--- a/content/panorama/localization/tenfoot_danish.txt
+++ b/content/panorama/localization/tenfoot_danish.txt
@@ -614,4 +614,10 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"VENTER..."
 "[english]Now_Waiting"	"WAITING..."
+"MutedLabel"	"Dæmpet"
+"[english]MutedLabel"	"Muted"
+"BackToApp"	"TILBAGE TIL APP"
+"[english]BackToApp"	"BACK TO APP"
+"QuitApp"	"AFSLUT APP"
+"[english]QuitApp"	"QUIT APP"
 }
