--- a/content/vrmonitor/translations/vrmonitor_italian.txt
+++ b/content/vrmonitor/translations/vrmonitor_italian.txt
@@ -1439,7 +1439,7 @@
 "[english]KnockKnock_Notification_Text"	"Knock Knock\nSomeone outside VR would like your attention."
 "MenuAction_Workshop_UploadItem"	"Carica nuovo oggetto"
 "[english]MenuAction_Workshop_UploadItem"	"Upload New Background"
-"MenuAction_Workshop_EditItem"	"Modifica oggetto esistente"
+"MenuAction_Workshop_EditItem"	"Modifica sfondo esistente"
 "[english]MenuAction_Workshop_EditItem"	"Modify Existing Background"
 "MenuAction_ModelDirectory_Browse"	"Sfoglia cartella dei modelli"
 "[english]MenuAction_ModelDirectory_Browse"	"Browse Model Directory"
@@ -1901,6 +1901,8 @@
 "[english]MessageBox_Submit"	"Submit"
 "BugReporter_Title"	"Segnala un bug"
 "[english]BugReporter_Title"	"Report A Bug"
+"BugReporter_ForPersonalSupport"	"Questa non è una richiesta di assistenza e non riceverai una risposta diretta. Se hai bisogno di assistenza specifica da un membro del nostro staff, allora visita il sito dell'Assistenza."
+"[english]BugReporter_ForPersonalSupport"	"This is not a support ticket and you will not receive a direct response. To receive personalized SteamVR support from an agent, please visit the support site."
 "BugReporter_SteamVRSupport"	"Assistenza di SteamVR"
 "[english]BugReporter_SteamVRSupport"	"SteamVR Support"
 "BugReporter_Subject"	"Oggetto:"
@@ -1915,9 +1917,11 @@
 "[english]BugReporter_ReportType_Bug"	"Bug"
 "BugReporter_ReportType_FeatureRequest"	"Richiesta di funzionalità"
 "[english]BugReporter_ReportType_FeatureRequest"	"Feature Request"
+"BugReporter_ReportType_Feedback"	"Suggerimenti"
+"[english]BugReporter_ReportType_Feedback"	"Feedback"
 "BugReporter_PreviewReport"	"Anteprima della segnalazione"
 "[english]BugReporter_PreviewReport"	"Preview Report"
-"BugReporter_IncludeReportAndLogs"	"Includi il rapporto di sistema e i log"
+"BugReporter_IncludeReportAndLogs"	"Includi il rapporto e i registri di sistema"
 "[english]BugReporter_IncludeReportAndLogs"	"Include System Report And Logs"
 "BugReporter_IncludeCrashDumps"	"Includi i rapporti sugli arresti improvvisi"
 "[english]BugReporter_IncludeCrashDumps"	"Include Crash Dumps"
@@ -1931,9 +1935,19 @@
 "[english]BugReporter_SteamLoginRequired"	"You need to be logged in to your Steam account to Report A Bug."
 "BugReporter_SubmissionSuccess"	"Invio effettuato con successo.\n\nGrazie."
 "[english]BugReporter_SubmissionSuccess"	"Submission Successful.\n\nThank You."
+"BugReporter_SubmissionFailure"	"Invio non riuscito.\n\nIl segnalatore di bug potrebbe non essere disponibile. Riprova.\n\nErrore: %1\n"
+"[english]BugReporter_SubmissionFailure"	"Submission Failure.\n\nThe Bug Collector may be busy. Please try submitting again.\n\nError: %1\n"
 "BugReporter_PreviewReportTitle"	"Segnala un bug - Anteprima della segnalazione"
 "[english]BugReporter_PreviewReportTitle"	"Report A Bug - Preview Report"
 "BugReporter_ProgressSubmitting"	"Invio in corso..."
 "[english]BugReporter_ProgressSubmitting"	"Submitting..."
+"BugReporter_SubmissionTimeout"	"Invio sospeso.\n\nIl caricamento sta richiedendo più tempo del previsto. Riprova più tardi.\n"
+"[english]BugReporter_SubmissionTimeout"	"Submission Timeout.\n\nThe network upload is taking longer than expected. Please try again later.\n"
+"BugReporter_ProgressSubmittingPercent"	"Invio in corso...%1%"
+"[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
+"Settings_NightModeCheck"	"Modalità notturna"
+"[english]Settings_NightModeCheck"	"Night Mode"
+"Settings_NightModeDesc"	"La modalità notturna attenua la luminosità del visore fino alle 5 del mattino (o fino al riavvio di SteamVR)."
+"[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 }
 }
