--- a/content/vrmonitor/translations/vrmonitor_japanese.txt
+++ b/content/vrmonitor/translations/vrmonitor_japanese.txt
@@ -1437,9 +1437,9 @@
 "[english]KnockKnock_Button"	"Knock Knock"
 "KnockKnock_Notification_Text"	"トントン\n誰かが VR 外からあなたを呼んでいます。"
 "[english]KnockKnock_Notification_Text"	"Knock Knock\nSomeone outside VR would like your attention."
-"MenuAction_Workshop_UploadItem"	"新規アップロード"
+"MenuAction_Workshop_UploadItem"	"新規の背景をアップロード"
 "[english]MenuAction_Workshop_UploadItem"	"Upload New Background"
-"MenuAction_Workshop_EditItem"	"既存アイテムの変更"
+"MenuAction_Workshop_EditItem"	"既存の背景を調整"
 "[english]MenuAction_Workshop_EditItem"	"Modify Existing Background"
 "MenuAction_ModelDirectory_Browse"	"モデルディレクトリを閲覧"
 "[english]MenuAction_ModelDirectory_Browse"	"Browse Model Directory"
@@ -1885,9 +1885,71 @@
 "[english]Settings_Advanced_Supersampling_RequiresRestart"	"This change requires a restart of SteamVR to take effect."
 "Explanation_Supersampling"	"スーパーサンプリングにより、すべての VR アプリケーションは、取り付けられたヘッドセットのネイティブ解像度よりも高い、あるいは低い解像度でレンダリングします (デフォルトは 1.0)。注: 一部のアプリケーションが実行中の変更に正しく応答しない可能性があり、再起動が必要な場合があります。"
 "[english]Explanation_Supersampling"	"Supersampling will cause all VR applications to render at higher or lower resolution than the native resolution of the attached headset (1.0 is the default). NOTE: Some applications may not correctly respond to a change while running and may need to be restarted."
-"MenuAction_Workshop_RunTools"	"環境の作成/変更"
+"MenuAction_Workshop_RunTools"	"環境の作成/調整"
 "[english]MenuAction_Workshop_RunTools"	"Create/Modify an Environment"
 "MenuAction_Workshop_ViewWiki"	"SteamVR 環境 Wiki"
 "[english]MenuAction_Workshop_ViewWiki"	"SteamVR Environments Wiki"
+"Settings_EnableLinuxGPUProfiling"	"GPU プロファイリング有効化"
+"[english]Settings_EnableLinuxGPUProfiling"	"Enable GPU profiling"
+"Settings_Advanced_AllowSupersampleFiltering"	"高度なスーパーサンプルフィルタを有効化する"
+"[english]Settings_Advanced_AllowSupersampleFiltering"	"Enable Advanced Supersample Filtering"
+"Explanation_SupersamplingFiltering"	"スーパーサンプリングのフィルタオプション:"
+"[english]Explanation_SupersamplingFiltering"	"Supersampling Filtering Options:"
+"MenuAction_ReportABug"	"バグを報告"
+"[english]MenuAction_ReportABug"	"Report A Bug"
+"MessageBox_Submit"	"送信"
+"[english]MessageBox_Submit"	"Submit"
+"BugReporter_Title"	"バグを報告"
+"[english]BugReporter_Title"	"Report A Bug"
+"BugReporter_ForPersonalSupport"	"これはサポートチケットではないため、サポートからの返信はありません。 SteamVR サポートエージェントから個別に返信を受けるには、サポートサイトをご覧ください。"
+"[english]BugReporter_ForPersonalSupport"	"This is not a support ticket and you will not receive a direct response. To receive personalized SteamVR support from an agent, please visit the support site."
+"BugReporter_SteamVRSupport"	"SteamVR サポート"
+"[english]BugReporter_SteamVRSupport"	"SteamVR Support"
+"BugReporter_Subject"	"件名:"
+"[english]BugReporter_Subject"	"Subject:"
+"BugReporter_CharactersRemaining"	"残り %1 文字"
+"[english]BugReporter_CharactersRemaining"	"%1 Characters Remaining"
+"BugReporter_Description"	"説明:"
+"[english]BugReporter_Description"	"Description:"
+"BugReporter_ReportType"	"報告のタイプ:"
+"[english]BugReporter_ReportType"	"Report Type:"
+"BugReporter_ReportType_Bug"	"バグ"
+"[english]BugReporter_ReportType_Bug"	"Bug"
+"BugReporter_ReportType_FeatureRequest"	"機能リクエスト"
+"[english]BugReporter_ReportType_FeatureRequest"	"Feature Request"
+"BugReporter_ReportType_Feedback"	"フィードバック"
+"[english]BugReporter_ReportType_Feedback"	"Feedback"
+"BugReporter_PreviewReport"	"報告をプレビューする"
+"[english]BugReporter_PreviewReport"	"Preview Report"
+"BugReporter_IncludeReportAndLogs"	"システムレポートとログを含める"
+"[english]BugReporter_IncludeReportAndLogs"	"Include System Report And Logs"
+"BugReporter_IncludeCrashDumps"	"クラッシュダンプを含める"
+"[english]BugReporter_IncludeCrashDumps"	"Include Crash Dumps"
+"BugReporter_SubjectRequired"	"件名を入力して下さい。"
+"[english]BugReporter_SubjectRequired"	"Please supply a subject."
+"BugReporter_DescriptionRequired"	"説明を入力して下さい。"
+"[english]BugReporter_DescriptionRequired"	"Please supply a description."
+"BugReporter_FailedToCreateZip"	"ZIP 添付ファイルの作成に失敗しました。"
+"[english]BugReporter_FailedToCreateZip"	"Failed to create ZIP attachment."
+"BugReporter_SteamLoginRequired"	"バグを報告するには Steam アカウントにログインする必要があります。"
+"[english]BugReporter_SteamLoginRequired"	"You need to be logged in to your Steam account to Report A Bug."
+"BugReporter_SubmissionSuccess"	"送信成功。\n\nありがとうございました。"
+"[english]BugReporter_SubmissionSuccess"	"Submission Successful.\n\nThank You."
+"BugReporter_PreviewReportTitle"	"バグを報告 - プレビュー"
+"[english]BugReporter_PreviewReportTitle"	"Report A Bug - Preview Report"
+"BugReporter_ProgressSubmitting"	"送信しています..."
+"[english]BugReporter_ProgressSubmitting"	"Submitting..."
+"BugReporter_SubmissionTimeout"	"送信時のタイムアウト。\n\nネットワークのアップロードに時間がかかっています。後でもう一度お試しください。\n"
+"[english]BugReporter_SubmissionTimeout"	"Submission Timeout.\n\nThe network upload is taking longer than expected. Please try again later.\n"
+"BugReporter_ProgressSubmittingPercent"	"送信しています...%1%"
+"[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
+"Settings_HomeAppCheck"	"SteamVR Home ベータ"
+"[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
+"Settings_HomeAppDesc"	"新しい SteamVR Home 体験は、より豊かなホーム空間、ユーザー同士での交流機能などをサポートします。この機能は現在ベータに含まれており、掲示板でのフィードバックをお待ちしています。"
+"[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
+"Settings_NightModeCheck"	"ナイトモード"
+"[english]Settings_NightModeCheck"	"Night Mode"
+"Settings_NightModeDesc"	"ナイトモードはヘッドセットを午前 5:00 まで (または SteamVR が再起動されるまで) 減光します。"
+"[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 }
 }
