--- a/content/vrmonitor/translations/vrmonitor_turkish.txt
+++ b/content/vrmonitor/translations/vrmonitor_turkish.txt
@@ -1440,9 +1440,9 @@
 "[english]KnockKnock_Button"	"Knock Knock"
 "KnockKnock_Notification_Text"	"Tak Tak\nVR dışındaki biri ilginizi istiyor."
 "[english]KnockKnock_Notification_Text"	"Knock Knock\nSomeone outside VR would like your attention."
-"MenuAction_Workshop_UploadItem"	"Yeni Yükle"
+"MenuAction_Workshop_UploadItem"	"Yeni Arka Plan Yükle"
 "[english]MenuAction_Workshop_UploadItem"	"Upload New Background"
-"MenuAction_Workshop_EditItem"	"Mevcut Olanı Değiştir"
+"MenuAction_Workshop_EditItem"	"Mevcut Arka Planı Değiştir"
 "[english]MenuAction_Workshop_EditItem"	"Modify Existing Background"
 "MenuAction_ModelDirectory_Browse"	"Model Rehberine Göz At"
 "[english]MenuAction_ModelDirectory_Browse"	"Browse Model Directory"
@@ -1890,7 +1890,7 @@
 "[english]Settings_Advanced_Supersampling_RequiresRestart"	"This change requires a restart of SteamVR to take effect."
 "Explanation_Supersampling"	"Süper Örnekleme, tüm VR uygulamalarının bağlı başlığın normal çözünürlüğünden daha yüksek veya daha düşük bir çözünürlükte oluşturulmasına neden olacaktır (1.0 varsayılan değerdir). NOT: Bazı uygulamalar çalışırken bir değişikliğe doğru şekilde yanıt vermeyebilir ve yeniden başlatılması gerekebilir."
 "[english]Explanation_Supersampling"	"Supersampling will cause all VR applications to render at higher or lower resolution than the native resolution of the attached headset (1.0 is the default). NOTE: Some applications may not correctly respond to a change while running and may need to be restarted."
-"MenuAction_Workshop_RunTools"	"Bir Ortam Tasarla/Güncelle"
+"MenuAction_Workshop_RunTools"	"Bir Ortam Oluştur/Değiştir"
 "[english]MenuAction_Workshop_RunTools"	"Create/Modify an Environment"
 "MenuAction_Workshop_ViewWiki"	"SteamVR Ortamlar Wiki"
 "[english]MenuAction_Workshop_ViewWiki"	"SteamVR Environments Wiki"
