--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
@@ -174,8 +174,8 @@
 		"VR_Furniture_Bathtub001_Desc"				"A bathtub."
 		"VR_Furniture_Stand001"						"TV Stand"
 		"VR_Furniture_Stand001_Desc"				"A stand for your entertainment system."
-		"VR_Furniture_HousePlant001"				"House Plant - Bamboo"
-		"VR_Furniture_HousePlant001_Desc"			"Bamboo house plant."
+		"VR_Furniture_HousePlant001"				"House Plant"
+		"VR_Furniture_HousePlant001_Desc"			"A house plant."
 		"VR_Furniture_ComputerDesk001"				"Computer Desk"
 		"VR_Furniture_ComputerDesk001_Desc"			"A computer desk."
 		"VR_Furniture_Monitor001"					"Monitor"
